# ai-model-scanner

./: .gitignore  README.md  pyproject.toml
app/: celery_app.py  main.py  tasks.py
app/detector/: features.py  model.py
app/scanner/: identifier.py  sandbox_runner.py  static_pytorch.py
frontend/: app.py
results/: 5d12d283-60be-4cdf-be09-720302e8c155.json  df846718-35b3-4146-bb2c-f6a217a4c12e.json
sandbox/: Dockerfile  load_model.py
scripts/: test_static.py  train_detector.py
